# esda-ros-firmware

install/: local_setup.sh  setup.bash  (+2 more)
src/esda_ros_interface/: CMakeLists.txt  generate_ros2_topics.py  package.xml
src/esda_ros_interface/include/esda_ros_interface/: serial.h  visibility_control.h
src/esda_ros_interface/include/log/: latest_build
src/esda_ros_interface/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/esda_ros_interface/install/esda_ros_interface/include/esda_ros_interface/esda_ros_interface/msg/: esda_message.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
src/esda_ros_interface/install/esda_ros_interface/include/esda_ros_interface/esda_ros_interface/msg/detail/: esda_message__functions.c  esda_message__rosidl_typesupport_fastrtps_c.h  esda_message__type_support.h
src/esda_ros_interface/install/esda_ros_interface/lib/esda_ros_interface/: esda_serial_to_pc
src/esda_ros_interface/install/esda_ros_interface/local/lib/python3.10/dist-packages/esda_ros_interface/: _esda_ros_interface_s.ep.rosidl_typesupport_c.c  _esda_ros_interface_s.ep.rosidl_typesupport_fastrtps_c.c
src/esda_ros_interface/install/esda_ros_interface/local/lib/python3.10/dist-packages/esda_ros_interface-0.0.0-py3.10.egg-info/: SOURCES.txt  top_level.txt
src/esda_ros_interface/install/esda_ros_interface/share/esda_ros_interface/: local_setup.dsv  package.ps1  package.sh  package.zsh
src/esda_ros_interface/install/esda_ros_interface/share/esda_ros_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  esda_ros_interface__rosidl_typesupport_cExport.cmake  esda_ros_interface__rosidl_typesupport_introspection_cppExport.cmake
src/esda_ros_interface/install/esda_ros_interface/share/esda_ros_interface/msg/: EsdaMessage.msg
src/esda_ros_interface/log/: latest_build
src/esda_ros_interface/msg/: esda_messages.msg
src/esda_ros_interface/src/: esda_serial_to_pc.cpp
src/esda_ros_interface/src/log/: latest_build
(+82 files in other folders)
